--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </head>
 
         <body color="black">
-            <script src="./js/script.js">   </script>
+            <script src="./js/script.js">
+
+            </script>
 
             <div style="background: white;">
                 <center>
@@ -86,6 +88,7 @@
                     </div>
                 </div>
                 <div class="untuk-p">
+                    <script src="./js/script.js"></script>
                     <p> Ip Mu adalah =
                         <p id="ip"></p>
                     </p>
