--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" oncontextmenu="return false">
     <head>
-        <link rel="stylesheet" href="https://assets.ubuntu.com/v1/vanilla-framework-version-3.8.1.min.css" />
-
         <link rel="stylesheet" href="./css/style.css" />
 
         <meta charset="UTF-8">
@@ -62,7 +60,7 @@
             </marquee>
             <div class="container">
                 <header>
-                    <a href="#" class="logo"><center><img src="https://avatars.githubusercontent.com/u/62522733?v=4" width="100px"></center></a>
+                    <a href="#" class="logo"><center><img src="https://avatars.githubusercontent.com/u/62522733?v=4" width="100px" height="100px"></center></a>
                     <div class="menu-btn" id="menu">
                         <i class="fas fa-bars"></i>
                     </div>
