--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <meta name="twitter:image" content="https://xnuvers007.github.io/img/avatarku.png">
         <meta name="twitter:url" content="https://xnuvers007.github.io">
 
+        <title> Xnuvers007 Website</title>
+
         <script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"></script>
         </head>
 
@@ -60,7 +62,7 @@
             </marquee>
             <div class="container">
                 <header>
-                    <a href="#" class="logo"><center><img src="https://avatars.githubusercontent.com/u/62522733?v=4" width="100px" height="100px"></center></a>
+                    <a href="#" class="logo"><center><img src="https://avatars.githubusercontent.com/u/62522733?v=4" width="100px" height="100px" alt="Ini Avatar Saya"></center></a>
                     <div class="menu-btn" id="menu">
                         <i class="fas fa-bars"></i>
                     </div>
