--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" oncontextmenu="return false">
     <head>
+        <script src="./js/cls.js"></script>
         <link rel="stylesheet" href="./css/style.css" />
 
         <meta charset="UTF-8">
