--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="./css/style.css" />
 
         <!-- Content-Security-Policy: default-src 'self'-->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self'; frame-src 'self'; object-src 'self'; media-src 'self'; child-src 'self'; form-action 'self'; frame-ancestors 'self'; base-uri 'self'; plugin-types application/pdf application/x-shockwave-flash application/x-java-applet; sandbox allow-forms allow-same-origin allow-scripts allow-top-navigation allow-popups allow-popups-to-escape-sandbox; report-uri /report-violation; report-to default; block-all-mixed-content; upgrade-insecure-requests; require-sri-for script style; referrer no-referrer; referrer no-referrer-when-downgrade; referrer origin; referrer origin-when-cross-origin; referrer same-origin; referrer strict-origin; referrer strict-origin-when-cross-origin; referrer unsafe-url;">
+        <meta http-equiv="Content-Security-Policy-Report-Only" content="default-src 'none'; form-action 'none'; frame-ancestors 'none';">
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
