--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <head>
         <script src="./js/cls.js"></script>
         <link rel="stylesheet" href="./css/style.css" />
-
-        <!-- Content-Security-Policy: default-src 'self'-->
-        <meta http-equiv="Content-Security-Policy-Report-Only" content="default-src 'none'; form-action 'none'; frame-ancestors 'none';">
-
+        <meta charset="utf-8" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
