--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
         <meta name="description" content="Xnuvers007 Website :D ">
         <meta property="og:title" content="Xnuvers007 Website :D ">
         <meta property="og:description" content="Xnuvers007 Website :D ">
-        <meta property="og:image" content="https://xnuvers007.github.io/img/avatarku.png">
+        <link rel="icon" href="https://avatars.githubusercontent.com/u/62522733?v=4" type="image/x-icon">
+        <meta property="og:image" content="https://avatars.githubusercontent.com/u/62522733?v=4">
         <meta property="og:url" content="https://xnuvers007.github.io">
         <meta name="keywords" content="Website, Xnuvers007, Xnuvers007 Website, Xnuvers007 Website :D, Hacking, Film, Blog, Tutorial, Python, Cybersecurity, Programmer, Coding, Code, game, hack, hacks, yt, facebook, youtube, fb, programming, coder, peretasan, indonesia ">
         <meta property="og:type" content="website">
         <meta itemprop="name" content="Xnuvers007 Website :D ">
         <meta itemprop="description" content="Xnuvers007 Website :D ">
-        <meta itemprop="image" content="https://xnuvers007.github.io/img/avatarku.png">
+        <meta itemprop="image" content="https://avatars.githubusercontent.com/u/62522733?v=4">
         <meta name="author" content="Xnuvers007">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@xnuvers007">
         <meta name="twitter:creator" content="@xnuvers007">
         <meta name="twitter:title" content="Xnuvers007 Website :D ">
         <meta name="twitter:description" content="Xnuvers007 Website :D ">
-        <meta name="twitter:image" content="https://xnuvers007.github.io/img/avatarku.png">
+        <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/62522733?v=4">
         <meta name="twitter:url" content="https://xnuvers007.github.io">
 
         <title> Xnuvers007 Website</title>
@@ -32,6 +33,11 @@
         </head>
 
         <body color="black">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+            <div id="loading">
+                <img id="loading-image" src="https://media.tenor.com/8KWBGNcD-zAAAAAC/loader.gif" alt="Loading..." />
+            </div>
+
             <script src="./js/script.js">
 
             </script>
@@ -40,9 +46,6 @@
                 <center>
                 <iframe src="https://freesecure.timeanddate.com/clock/i7h99ycq/n108/fn7/fs17/tct/pct/ftb/tt0/th1/ta1" frameborder="0" width=100% height="30" allowtransparency="true" title="Jam"></iframe></center>
                 </div>
-
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-
                 <script>
                     $(document).ready(function(){
                         $("#menu").click(function(){
@@ -63,11 +66,38 @@
             </marquee>
             <div class="container">
                 <header>
+                    <nav>
+                        <ul class="ini-ul">
+                            <center>
+                            <li class="ini-li">
+                                <a href="./index.html" class="ini-a">
+                                    Home
+                                </a>
+                            </li>
+                            <li class="ini-li">
+                                <a href="./about.html" class="ini-a">
+                                    About
+                                </a>
+                            </li>
+                            <li class="ini-li">
+                                <a href="./contact.html" class="ini-a">
+                                    Contact
+                                </a>
+                            </li><br />
+                            <br />
+                            <li class="ini-li">
+                                <a href="https://sfile.mobi/1d4Ne1mGcIU7" class="ini-a">
+                                    Download This web to Apk
+                                </a>
+                            </li>
+                        </center>
+                        </ul>
+                    </nav>
                     <a href="#" class="logo"><center><img src="https://avatars.githubusercontent.com/u/62522733?v=4" width="100px" height="100px" alt="Ini Avatar Saya"></center></a>
                     <div class="menu-btn" id="menu">
                         <i class="fas fa-bars"></i>
                     </div>
-                    <ul>
+                    <ul class="list">
                         <li><a href="https://xnuvers007.github.io">Home</a></li>
                         <li><a href="https://xnuvers007.github.io/lk21">Film</a></li>
                         <li><a href="https://xnuvers007.github.io/myportfolio">myportfolio</a></li>
@@ -87,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+            </div>
                 <div class="untuk-p">
                     <script>
                         $.getJSON('https://json.geoiplookup.io/?callback=?', function(data) {
@@ -194,5 +224,10 @@
             <br>
             <br>
             <br>
+            <script type="application/javascript">
+            $(window).on('load', function () {
+                $('#loading').hide();
+              });
+            </script>
 </body>
 </html>
