--- a/about.html
+++ b/about.html
@@ -28,6 +28,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
 <body bgcolor="#000000">
+    <div id="loading">
+        <img id="loading-image" src="https://media.tenor.com/8KWBGNcD-zAAAAAC/loader.gif" alt="Loading..." />
+    </div>
     <script type="application/javascript" src="./js/script.js"></script>
     <h1 id="ha">About Me</h1>
     <br />
@@ -100,6 +103,10 @@
             </a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
+        <script type="application/javascript">
+            $(window).on('load', function () {
+                $('#loading').hide();
+              });
+            </script>
 </body>
 </html>
