upload for a new feature

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>About Me</title>
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/62522733?v=4" type="image/x-icon">
     <meta property="og:title" content="About Me">
     <meta property="og:description" content="This is my about page">
     <meta property="og:image" content="https://i.ibb.co/q0rGZ8X/Indra.png">
