Upload Dir Game and bug Fixed

--- a/about.html
+++ b/about.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" oncontextmenu="return false">
 <head>
+    <script src="./js/cls.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>About Me</title>
     <link rel="icon" href="https://avatars.githubusercontent.com/u/62522733?v=4" type="image/x-icon">
     <meta property="og:title" content="About Me">
@@ -28,11 +31,13 @@
     <link rel="stylesheet" href="./css/aboutme.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
-<body bgcolor="#000000">
+<body color="black">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <div id="loading">
         <img id="loading-image" src="https://media.tenor.com/8KWBGNcD-zAAAAAC/loader.gif" alt="Loading..." />
     </div>
-    <script type="application/javascript" src="./js/script.js"></script>
+    <!-- <script type="application/javascript" src="./js/script.js"></script> -->
+    <script src="./js/script.js"></script>
     <h1 id="ha">About Me</h1>
     <br />
 
