--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css" />
 <title>Contact US</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,6 +37,7 @@
 </script>
 </head>
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <div id="loading">
                 <img id="loading-image" src="https://media.tenor.com/8KWBGNcD-zAAAAAC/loader.gif" alt="Loading..." />
             </div>
@@ -76,7 +78,7 @@ Send
 </div>
 <div id="dropDownSelect1"></div>
 
-<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+// <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 
 <script src="vendor/animsition/js/animsition.min.js"></script>
 
