--- a/about.html
+++ b/about.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" oncontextmenu="return false">
 <head>
+    <style>
+        #loading {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 99;
+}
+  
+#loading-image {
+    z-index: 100;
+}
+    </style>
     <script src="./js/cls.js"></script>
     <link rel="stylesheet" href="./css/style.css">
     <meta charset="utf-8">
@@ -36,6 +55,7 @@
     <div id="loading">
         <img id="loading-image" src="https://media.tenor.com/8KWBGNcD-zAAAAAC/loader.gif" alt="Loading..." />
     </div>
+
     <!-- <script type="application/javascript" src="./js/script.js"></script> -->
     <script src="./js/script.js"></script>
     <h1 id="ha">About Me</h1>
@@ -55,7 +75,7 @@
         </b>
     </div>
 
-    <div style="margin-bottom:3px; text-align: justify;">
+    <div style="margin-bottom:3px; text-align: center;">
         <article>
         Hanya seorang Manusia yang berantusias terhadap Teknologi, terutama dalam bidang Programming dan Penetration Testing.
         <br />
@@ -109,10 +129,11 @@
             </a>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-        <script type="application/javascript">
-            $(window).on('load', function () {
-                $('#loading').hide();
-              });
-            </script>
+    </div>
+    <script type="application/javascript">
+        $(window).on('load', function () {
+            $('#loading').hide();
+          });
+        </script>
 </body>
 </html>
