--- a/mobaxterm/index.html
+++ b/mobaxterm/index.html
@@ -176,9 +176,10 @@
         <a href="https://github.com/vuejs" target="_blank">Vue.js</a>
     </div>
     <div class="tutorial">
-        <p> Source Code: <a href="https://github.com/Xnuvers007/MobaXtermGenerator" target="_blank">https://github.com/Xnuvers007/MobaXtermGenerator</a> (python flask) demo in here <a href="https://moba.deployers.repl.co">https://moba.deployers.repl.co</a></p>
+        <p> Source Code: 
+            <a href="https://github.com/Xnuvers007/MobaXtermGenerator" target="_blank">https://github.com/Xnuvers007/MobaXtermGenerator</a> (python flask) demo in here <a href="https://moba.deployers.repl.co" target="_blank">https://moba.deployers.repl.co</a></p>
         <br />
-        <p> Source Code 2: <a href="https://github.com/Xnuvers007/Xnuvers007.github.io/blob/3a96b4ee2e178e92bd0d2450521a978d1e33c518/mobaxterm/index.html" target="_blank">https://github.com/Xnuvers007/Xnuvers007.github.io/blob/3a96b4ee2e178e92bd0d2450521a978d1e33c518/mobaxterm/index.html</a> (HTML) demo in here <a href="https://xnuvers007.github.io/mobaxterm/">https://xnuvers007.github.io/mobaxterm/</a></p>
+        <p> Source Code 2: <a href="https://github.com/Xnuvers007/Xnuvers007.github.io/blob/3a96b4ee2e178e92bd0d2450521a978d1e33c518/mobaxterm/index.html" target="_blank">https://github.com/Xnuvers007/Xnuvers007.github.io/blob/3a96b4ee2e178e92bd0d2450521a978d1e33c518/mobaxterm/index.html</a> (HTML) demo in here <a href="https://xnuvers007.github.io/mobaxterm/" target="_blank">https://xnuvers007.github.io/mobaxterm/</a></p>
         <p class="text-center2">
             Created by <a href="https://github.com/Xnuvers007" target="_blank">Xnuvers007</a><br />
             Tutorial: <br />
