--- a/mobaxterm/index.html
+++ b/mobaxterm/index.html
@@ -135,8 +135,8 @@
                                     <option value="1">Professional</option>
                                     <option value="3">Educational</option>
                                     <option value="4">Personal</option>
-                                </select> -->
-                            </div>                            
+                                </select>
+                            </div> -->
                             <div class="pure-control-group pure-u-1">
                                 <label for="userName">Username:</label>
                                 <my-input :idattr="'userName'" :validation="'^[a-zA-Z]+$'" :valueattr="userName"
