--- a/mobaxterm/index.html
+++ b/mobaxterm/index.html
@@ -11,13 +11,13 @@
     <script src="js/FileSaver/FileSaver.min.js"></script>
     <script src="js/jszip/jszip.min.js"></script> -->
 
-    <script src="js/vue/vue.min-2.6.12.js"></script>
-    <script src="js/FileSaver/FileSaver.min.js"></script>
-    <script src="js/jszip/jszip.min.js"></script>
-    <script src="js/mobaXtermGenerater.js"></script>
-
+    <script src="./js/vue/vue.min-2.6.12.js"></script>
+    <script src="./js/FileSaver/FileSaver.min.js"></script>
+    <script src="./js/jszip/jszip.min.js"></script>
+<!--     <script src="{{ url_for('static', filename='js/mobaXtermGenerater.js') }}"></script>
+ -->
     <!-- <link href="css/pure-min.css" rel="stylesheet" /> -->
-    <link rel="stylesheet" type="text/css" href="css/pure-min.css">
+    <link rel="stylesheet" type="text/css" href="./css/pure-min.css">
 
     <style>
         .box-main {
@@ -125,7 +125,7 @@
                         </legend>
 
                         <div class="pure-g">
-<!--                             <div class="pure-control-group pure-u-1">
+                            <!-- <div class="pure-control-group pure-u-1">
                                 <label for="licenseType">Version:</label>
                                 <select name="licenseType" id="licenseType" v-model="licenseType">
                                     <option value="">Please select</option>
@@ -140,7 +140,7 @@
                                     <option value="3">Educational</option>
                                     <option value="4">Personal</option>
                                 </select>
-                            </div>
+                            </div>                            
                             <div class="pure-control-group pure-u-1">
                                 <label for="userName">Username:</label>
                                 <my-input :idattr="'userName'" :validation="'^[a-zA-Z]+$'" :valueattr="userName"
@@ -180,10 +180,7 @@
         <a href="https://github.com/vuejs" target="_blank">Vue.js</a>
     </div>
     <div class="tutorial">
-        <p> Source Code: 
-            <a href="https://github.com/Xnuvers007/MobaXtermGenerator" target="_blank">https://github.com/Xnuvers007/MobaXtermGenerator</a> (python flask) demo in here <a href="https://moba.deployers.repl.co" target="_blank">https://moba.deployers.repl.co</a></p>
-        <br />
-        <p> Source Code 2: <a href="https://github.com/Xnuvers007/Xnuvers007.github.io/blob/3a96b4ee2e178e92bd0d2450521a978d1e33c518/mobaxterm/index.html" target="_blank">https://github.com/Xnuvers007/Xnuvers007.github.io/blob/3a96b4ee2e178e92bd0d2450521a978d1e33c518/mobaxterm/index.html</a> (HTML) demo in here <a href="https://xnuvers007.github.io/mobaxterm/" target="_blank">https://xnuvers007.github.io/mobaxterm/</a></p>
+        <p> Source Code: <a href="https://github.com/Xnuvers007/MobaXtermGenerator" target="_blank">https://github.com/Xnuvers007/MobaXtermGenerator</a></p>
         <p class="text-center2">
             Created by <a href="https://github.com/Xnuvers007" target="_blank">Xnuvers007</a><br />
             Tutorial: <br />
@@ -195,9 +192,7 @@
     </div>
 
     <script type="module">
-        // import { LicenseType, generateLicense } from '/js/mobaXtermGenerater.js'
-
-        import { LicenseType, generateLicense } from 'js/mobaXtermGenerater.js'
+        import { LicenseType, generateLicense } from './js/mobaXtermGenerater.js'
         
         var app = new Vue({
             el: '#app',
