--- a/mobaxterm/index.html
+++ b/mobaxterm/index.html
@@ -14,6 +14,7 @@
     <script src="./js/vue/vue.min-2.6.12.js"></script>
     <script src="./js/FileSaver/FileSaver.min.js"></script>
     <script src="./js/jszip/jszip.min.js"></script>
+    <script src="./js/mobaXtermGenerater.js"></script>
 <!--     <script src="{{ url_for('static', filename='js/mobaXtermGenerater.js') }}"></script>
  -->
     <!-- <link href="css/pure-min.css" rel="stylesheet" /> -->
@@ -125,14 +126,14 @@
                         </legend>
 
                         <div class="pure-g">
-                            <!-- <div class="pure-control-group pure-u-1">
+                            <div class="pure-control-group pure-u-1">
                                 <label for="licenseType">Version:</label>
                                 <select name="licenseType" id="licenseType" v-model="licenseType">
                                     <option value="">Please select</option>
                                     <option v-for="(val, key) in LICENSE_TYPES" :value="val">{{key}}</option>
                                 </select>
-                            </div> -->
-                            <div class="pure-control-group pure-u-1">
+                            </div>
+<!--                             <div class="pure-control-group pure-u-1">
                                 <label for="licenseType">Version:</label>
                                 <select name="licenseType" id="licenseType" v-model="licenseType">
                                     <option value="">Please select</option>
@@ -140,7 +141,7 @@
                                     <option value="3">Educational</option>
                                     <option value="4">Personal</option>
                                 </select>
-                            </div>                            
+                            </div>                             -->
                             <div class="pure-control-group pure-u-1">
                                 <label for="userName">Username:</label>
                                 <my-input :idattr="'userName'" :validation="'^[a-zA-Z]+$'" :valueattr="userName"
