--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
                                 </a>
                             </li>
                             <li class="ini-li">
+                                <a href="./mobaxterm/index.html" class="ini-a">
+                                    About
+                                </a>
+                            </li>
+                            <li class="ini-li">
                                 <a href="./contact.html" class="ini-a">
                                     Contact
                                 </a>
