--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </li>
                             <li class="ini-li">
                                 <a href="./mobaxterm/index.html" class="ini-a">
-                                    About
+                                    MobaXterm License
                                 </a>
                             </li>
                             <li class="ini-li">
