--- a/PemrogramanWeb/index.html
+++ b/PemrogramanWeb/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark/dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="https://i.pinimg.com/564x/39/85/a6/3985a6d86879b0e0e197d88ad3559a34.jpg">
+    <meta name="description" content="Website Pariwisata Indonesia">
+    <meta name="keywords" content="pariwisata, indonesia, wisata, budaya">
     <script type="text/javascript">
         function googleTranslateElementInit() {
             new google.translate.TranslateElement({
@@ -54,10 +57,10 @@
                     <img src="images/Indonesia.webp" alt="Indonesia" class="d-block w-100 img-fluid rounded shadow-sm">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/indonesia2.webp" alt="Indonesia 2" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <img src="images/Indonesia2.webp" alt="Indonesia 2" class="d-block w-100 img-fluid rounded shadow-sm">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/indonesia3.webp" alt="Indonesia 3" class="d-block w-100 img-fluid rounded shadow-sm">
+                    <img src="images/Indonesia3.webp" alt="Indonesia 3" class="d-block w-100 img-fluid rounded shadow-sm">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
@@ -267,4 +270,3 @@
     <script src="scripts.js"></script>
 </body>
 </html>
-
